Datatable UI Alignment fix and

--- a/resources/scss/components/_table.scss
+++ b/resources/scss/components/_table.scss
@@ -53,8 +53,12 @@
             background-color: $primary-blue !important;
             color: var(--white) !important;
             border: 0 !important;
-
+            white-space: nowrap;
             border-width: 0 !important;
+            font-weight: 700;
+        }
+        .p-column-title{
+            font-weight: 600;
         }
     }
     // .p-datatable-tbody {
@@ -82,6 +86,7 @@
         text-align: center !important;
         font-weight: var(--font-regular);
         padding: 0.8rem 1rem !important;
+     
         
     }
 }
